[package]
authors = ["Elias Wilken <elias@wlkn.io>"]
description = "Rust implementation of the Apple HomeKit Accessory Protocol (HAP)"
documentation = "https://docs.rs/hap"
edition = "2021"
exclude = [
	".github",
	".gitignore",
	"LICENSE-APACHE",
	"LICENSE-MIT",
	"README.md",
	"examples",
	"rls.toml",
	"rustfmt.toml",
]
keywords = ["apple", "homekit"]
license = "MIT/Apache-2.0"
name = "hap"
readme = "README.md"
repository = "https://github.com/ewilken/hap-rs"
version = "0.1.0-pre.15"

[dependencies]
aead             = { version = "0.4" }
async-trait      = { version = "0.1" }
byteorder        = { version = "1.5" }
bytes            = { version = "1.8" }
chacha20poly1305 = { version = "0.8" }
ed25519-dalek    = { version = "2.1", features = ["serde", "std"] }
erased-serde     = { version = "0.3" }
futures          = { version = "0.3" }
get_if_addrs     = { version = "0.5" }
hkdf             = { version = "0.11" }
hyper            = { version = "0.14", features = ["http1", "server"] }
libmdns          = { version = "0.9" }
log              = { version = "0.4" }
macaddr          = { version = "1.0", features = ["serde"] }
num              = { version = "0.4" }
rand             = { version = "0.7" }
serde            = { version = "1.0", features = ["derive", "rc"] }
serde_json       = { version = "1.0" }
sha2             = { version = "0.9" }
signature        = { version = "1.1" }
srp              = { version = "0.5" }
thiserror        = { version = "2.0" }
tokio            = { version = "1.41" }
url              = { version = "2.5" }
uuid             = { version = "1.11", features = ["serde", "v4"] }
x25519-dalek     = { version = "0.6" }

[build-dependencies]
handlebars = { version = "2.0" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid       = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
env_logger = { version = "0.11" }
serde      = { version = "1.0", features = ["derive"] }
tokio      = { version = "1.41", features = ["macros", "rt-multi-thread", "time"] }

[workspace]
members = ["codegen"]
